--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>Portofolio</title>
   <base href="/">
+  
+  <link href="https://fonts.googleapis.com/css?family=Livvic&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
