app title change

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Portofolio</title>
+  <title>Leutrim Kosumi</title>
   <base href="/">
   
   <link href="https://fonts.googleapis.com/css?family=Livvic&display=swap" rel="stylesheet">
